Update install.n.setup.md